# taskbadger-python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  generator_config.yml  pyproject.toml  taskbadger.yaml  tasks.py
.github/: RELEASE-TEMPLATE.md
.github/workflows/: integration_tests.yml  publish.yml  release.yml  tests.yml
customizations/taskbadger/: sdk.py
docs/superpowers/plans/: 2026-05-25-procrastinate-integration.md
docs/superpowers/specs/: 2026-05-25-procrastinate-integration-design.md
examples/: backup.sh  badger.sh  demo.py  function_wrapper.py  migration_utils.py
integration_tests/: __init__.py  conftest.py  tasks.py  test_basics.py  test_celery.py  test_procrastinate.py
taskbadger/: __init__.py  _integrations.py  celery.py  cli.py  cli_main.py  config.py  decorators.py  errors.py  exceptions.py  integrations.py  mug.py  process.py  procrastinate.py  safe_sdk.py  sdk.py  utils.py
taskbadger/api/action_endpoints/: action_create.py  action_update.py  tasks_actions_partial_update.py
taskbadger/api/task_endpoints/: task_create.py  task_get.py  task_list.py  task_update.py
taskbadger/cli/: __init__.py  basics.py  list_tasks.py  run.py  task.py  utils.py  wrapper.py
taskbadger/internal/: __init__.py  client.py  errors.py  types.py
taskbadger/internal/api/action_endpoints/: action_cancel.py  action_create.py  action_get.py  action_list.py  action_partial_update.py  action_update.py
taskbadger/internal/api/task_endpoints/: task_cancel.py  task_create.py  task_get.py  task_list.py  task_partial_update.py  task_update.py  tasks_partial_update.py
taskbadger/internal/models/: __init__.py  action.py  action_config.py  action_request.py  action_request_config.py  paginated_task_list.py  patched_action_request.py  patched_action_request_config.py  patched_task_request.py  patched_task_request_data.py  patched_task_request_data_type_0.py  patched_task_request_tags.py  status_enum.py  task.py  task_data.py  task_data_type_0.py  task_request.py  task_request_data.py  task_request_data_type_0.py  task_request_tags.py  task_tags.py
taskbadger/models/: __init__.py  action.py  status_enum.py  task.py  task_data.py  task_request_data.py
taskbadger/systems/: __init__.py  celery.py  procrastinate.py
tests/: conftest.py  test_celery.py  test_celery_error.py  test_celery_system_integration.py  test_cli_config.py  test_cli_create_update.py  test_cli_run.py  test_decorators.py  test_init.py  test_monitor.py  test_mug.py  test_procrastinate.py  test_procrastinate_system_integration.py  test_project_key.py  test_scope.py  test_sdk.py  test_sdk_primatives.py  test_session.py  utils.py
