[tool.poetry]
name = "taskbadger"
version = "1.3.1"
description = "The official Python SDK for Task Badger"
license = "Apache-2.0"

authors = []

readme = "README.md"
packages = [
    {include = "taskbadger"},
]
include = ["CHANGELOG.md", "taskbadger/internal/py.typed"]

homepage = "https://taskbadger.net/"
repository = "https://github.com/taskbadger/taskbadger-python"
documentation = "https://docs.taskbadger.net/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/taskbadger/taskbadger-python/releases"

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.20.0,<0.28.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"
typer = {extras = ["all"], version = "<0.10.0"}
tomlkit = "^0.12.5"
importlib-metadata = {version = "^1.0", python = "<3.8"}
typing-extensions = {version = "^4.7.1", python = "3.9"}
celery = {version = ">=4.0.0,<6.0.0", optional = true}

[tool.poetry.extras]
celery = ["celery"]

[tool.poetry.group.dev.dependencies]
openapi-python-client = "^0.15.1"
pytest = "^7.2.1"
isort = "^5.12.0"
black = "^23.1.0"
pre-commit = "^3.0.2"
pytest-httpx = "^0.21.3"
invoke = "^2.0.0"
pytest-celery = ">0.0.0"

[tool.poetry.scripts]
taskbadger = "taskbadger.cli_main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py37', 'py38', 'py39']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 120
profile = "black"

[tool.pytest.ini_options]
# don't run integration tests unless specifically requested
norecursedirs = ".* integration_tests"
